--- a/s03-semanticos.html
+++ b/s03-semanticos.html
@@ -1,1 +1,78 @@
+Image to Code
+Toggle Sidebar
+MODELS
 
+New
+
+Features
+
+No screenshot history
+
+Toggle theme
+Generating:
+
+HTML + Tailwind
+Include screenshot of current version?
+
+
+Select and update
+Versions
+Imported from code
+v1
+Toggle
+"Crie um design de perfil com um fundo escuro (preferencialmente preto ou azul escuro) que inclua os seguintes elementos: Foto Central: Insira uma foto minha no centro do design. A imagem deve ser de alta qualidade e bem iluminada. Ícones das Redes Sociais: Adicione os ícones das seguintes plataformas ao redor da minha foto: Spotify (ícone verde) Instagram (ícone com cores roxas e laranja) TikTok (ícone com preto, azul e rosa) GitHub (ícone preto e branco) Os ícones devem estar dispostos de forma circular ou em linha, garantindo que sejam claramente visíveis. Opção de Modo Noturno: No canto superior direito, adicione um ícone que represente o modo noturno, como uma lua ou um botão. O ícone deve ser simples e em um tom claro (como amarelo ou branco) para se destacar no fundo escuro. Estilo Geral: O design deve ser moderno e minimalista, com uma paleta de cores que combine com o tema noturno. Os ícones devem ser proporcionais à minha foto e não devem sobrepor-se. Use ferramentas de design gráfico como Canva ou Adobe Spark para criar este layout, garantindo que todos os elementos estejam bem alinhados e harmoniosos."
+v2
+Toggle
+Reset
+Download
+Desktop
+Mobile
+Code
+html
+Edit
+Copy code
+<html lang="pt-BR">
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>
+   Perfil
+  </title>
+  <script src="https://cdn.tailwindcss.com">
+  </script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet"/>
+ </head>
+ <body class="bg-black text-white font-roboto">
+  <div class="flex flex-col items-center justify-center min-h-screen">
+   <div class="relative">
+    <img alt="Foto central de alta qualidade e bem iluminada" class="rounded-full border-4 border-gray-700" height="200" src="https://storage.googleapis.com/a1aa/image/RdbLGNV2c05fB6171f4SOPC81j50xVl0tgQCbcpOA0CWEpzTA.jpg" width="200"/>
+    <div class="absolute top-0 right-0 mt-2 mr-2">
+     <i class="fas fa-moon text-yellow-400 text-2xl cursor-pointer">
+     </i>
+    </div>
+   </div>
+   <div class="flex space-x-6 mt-6">
+    <a class="text-green-500 text-3xl" href="https://spotify.com" target="_blank">
+     <i class="fab fa-spotify">
+     </i>
+    </a>
+    <a class="text-purple-500 text-3xl" href="https://instagram.com" target="_blank">
+     <i class="fab fa-instagram">
+     </i>
+    </a>
+    <a class="text-pink-500 text-3xl" href="https://tiktok.com" target="_blank">
+     <i class="fab fa-tiktok">
+     </i>
+    </a>
+    <a class="text-white text-3xl" href="https://github.com" target="_blank">
+     <i class="fab fa-github">
+     </i>
+    </a>
+   </div>
+  </div>
+ </body>
+</html>
+Message Blackbox or upload image...
+
+By using Blackbox you agree to the Terms and Privacy.
