--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <body class="bg-black text-white font-roboto">
   <div class="flex flex-col items-center justify-center min-h-screen">
    <div class="relative">
-    <img alt="Foto central de alta qualidade e bem iluminada" class="rounded-full border-4 border-gray-700" height="200" src="https://storage.googleapis.com/a1aa/image/RdbLGNV2c05fB6171f4SOPC81j50xVl0tgQCbcpOA0CWEpzTA.jpg" width="200"/>
+    <img alt="Foto de perfil" class="rounded-full border-4 border-gray-700" height="200" src="https://avatars.githubusercontent.com/u/121637450?s=400&u=642904ff86ccbd29d93e7bfff4f5a499a61618fc&v=4" width="200"/>
     <div class="absolute top-0 right-0 mt-2 mr-2">
      <i class="fas fa-moon text-yellow-400 text-2xl cursor-pointer">
      </i>
