--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
      <i class="fab fa-spotify">
      </i>
     </a>
-    <a class="text-purple-500 text-3xl" href="https://instagram.com" target="_blank">
+    <a class="text-purple-500 text-3xl" href="https://www.instagram.com/_otiiagosilva" target="_blank">
      <i class="fab fa-instagram">
      </i>
     </a>
-    <a class="text-pink-500 text-3xl" href="https://tiktok.com" target="_blank">
+    <a class="text-pink-500 text-3xl" href="https://www.tiktok.com/@_otiagosilva" target="_blank">
      <i class="fab fa-tiktok">
      </i>
     </a>
-    <a class="text-white text-3xl" href="https://github.com" target="_blank">
+    <a class="text-white text-3xl" href="https://github.com/otiiagosilva" target="_blank">
      <i class="fab fa-github">
      </i>
     </a>
