--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <img alt="Foto de perfil" class="rounded-full border-4 border-gray-700" height="200" src="https://avatars.githubusercontent.com/u/121637450?s=400&u=642904ff86ccbd29d93e7bfff4f5a499a61618fc&v=4" width="200"/>
    </div>
    <div class="flex space-x-6 mt-6">
-    <a class="text-green-500 text-3xl" href="https://spotify.com" target="_blank">
-     <i class="fab fa-spotify">
+    <a class="text-green-500 text-3xl" href="https://www.linkedin.com/in/otiiagosilva/" target="_blank">
+     <i class="fab fa-linkedin-in">
      </i>
     </a>
     <a class="text-purple-500 text-3xl" href="https://www.instagram.com/_otiiagosilva" target="_blank">
