--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      <i class="fab fa-linkedin-in">
      </i>
     </a>
-    <a class="text-purple-500 text-3xl" href="https://www.instagram.com/_otiiagosilva" target="_blank">
+    <a class="text-purple-500 text-3xl" href="https://www.instagram.com/_otiiagosilva/profilecard/?igsh=MXB5cjJxbDJzanBwbg==" target="_blank">
      <i class="fab fa-instagram">
      </i>
     </a>
