--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
      <i class="fab fa-instagram">
      </i>
     </a>
-    <a class="text-pink-500" href="https://www.tiktok.com/@_otiagosilva
+    <a class="text-pink-500" href="https://www.tiktok.com/@_otiagosilva">
      <i class="fab fa-tiktok">
      </i>
     </a>
