--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
      </i>
     </a>
    </div>
-   <a class="bg-white text-black py-2 px-4 rounded-full text-lg font-bold" href="#">
+   <a class="bg-white text-black py-2 px-4 rounded-full text-lg font-bold" href="home.html">
     Portfólio
    </a>
   </div>
