--- a/home.html
+++ b/home.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
  <head>
-  <meta property="og:image" 1 content="https://avatars.githubusercontent.com/u/121637450?s=400&u=642904ff86ccbd29d93e7bfff4f5a499a61618fc&v=4" />
-   <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="@otiiagosilva">
+  <meta property="og:description" content="Perfil de Tiago Batista da Silva">
+  <meta property="og:image" content="https://avatars.githubusercontent.com/u/121637450?s=400&u=642904ff86ccbd29d93e7bfff4f5a499a641618fc&v=4">
+  <meta property="og:url" content="https://otiiagosilva.github.io/profile/">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com">
   </script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
