--- a/videoplayer.html
+++ b/videoplayer.html
@@ -25,7 +25,7 @@
         if (Hls.isSupported()) {
             var video = document.getElementById('videoPlayer');
             var hls = new Hls();
-            hls.loadSource('http://tomyer.in/get.php?username=30921276&password=r319Z8072W&type=m3u_plus');
+            hls.loadSource('http://tomyer.in:80/30921276/r319Z8072W/674');
             hls.attachMedia(video);
             hls.on(Hls.Events.MANIFEST_PARSED, function() {
                 video.play();
