--- a/videoplayer.html
+++ b/videoplayer.html
@@ -32,5 +32,19 @@
             });
         }
     </script>
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>The video autoplay attribute</h1>
+
+<video width="320" height="240" controls autoplay>
+  <source src="http://tomyer.in:80/30921276/r319Z8072W/674" type="video/mp4">
+  <source src="http://tomyer.in:80/30921276/r319Z8072W/674" type="video/ogg">
+  Your browser does not support the video tag.
+</video>
+
+</body>
+</html>
 </body>
 </html>
