--- a/home.html
+++ b/home.html
@@ -6,10 +6,18 @@
   <meta property="og:url" content="https://otiiagosilva.github.io/profile/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: black;
+      color: white;
+      overflow: hidden;
+      position: relative;
+      min-height: 100vh;
+    }
     @keyframes blink {
       0% { opacity: 1; }
       50% { opacity: 0; }
@@ -49,7 +57,7 @@
     }
   </style>
 </head>
-<body class="bg-black flex flex-col items-center justify-between min-h-screen relative overflow-hidden">
+<body>
   <div class="absolute inset-0">
     <div class="comet"></div>
     <div class="stars" style="top: 10%; left: 20%; animation-delay: 0s;"></div>
@@ -58,42 +66,57 @@
     <div class="stars" style="top: 70%; left: 80%; animation-delay: 3s;"></div>
     <div class="stars" style="top: 90%; left: 10%; animation-delay: 4s;"></div>
   </div>
-  <nav class="relative z-10 mt-6 w-full">
-    <div class="flex justify-end items-center px-8">
-      <button class="text-white text-2xl focus:outline-none" id="menu-toggle">
-        <i class="fas fa-bars"></i>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Redes Sociais</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Projetos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Certificados</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Galeria</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contato</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <ul class="flex flex-col space-y-4 text-white text-lg mt-4 hidden font-roboto px-8" id="menu">
-      <li><a class="hover:underline" href="#">Home</a></li>
-      <li><a class="hover:underline" href="#">Redes Sociais</a></li>
-      <li><a class="hover:underline" href="#">Projetos</a></li>
-      <li><a class="hover:underline" href="#">Certificados</a></li>
-      <li><a class="hover:underline" href="#">Galeria</a></li>
-      <li><a class="hover:underline" href="#">Contato</a></li>
-    </ul>
   </nav>
-  <div class="text-center relative z-10 flex-grow flex flex-col items-center justify-center">
-    <div class="text-white text-3xl mb-4 shadow-lg">
-      <i class="fas fa-tools"></i> Em breve
+  <div class="container text-center d-flex flex-column justify-content-center align-items-center" style="min-height: 80vh;">
+    <div class="mb-4">
+      <i class="fas fa-tools fa-3x"></i>
+      <h1 class="mt-3">Em breve</h1>
     </div>
-    <div class="flex space-x-4 mt-4">
-      <button class="text-white text-4xl focus:outline-none">
-        <i class="fas fa-arrow-left"></i>
+    <div class="content-area mb-4">
+      <!-- Conteúdo central pode ser inserido aqui -->
+      <p>Este é um espaço reservado para conteúdo adicional.</p>
+    </div>
+    <div class="d-flex justify-content-center mt-4">
+      <button class="btn btn-outline-light me-3">
+        <i class="fas fa-arrow-left fa-2x"></i>
       </button>
-      <button class="text-white text-4xl focus:outline-none">
-        <i class="fas fa-arrow-right"></i>
+      <button class="btn btn-outline-light">
+        <i class="fas fa-arrow-right fa-2x"></i>
       </button>
     </div>
   </div>
-  <footer class="relative z-10 mb-6 text-white">
+  <footer class="text-center py-3">
     &copy; 2024
   </footer>
-  <script>
-    document.getElementById('menu-toggle').addEventListener('click', function() {
-      var menu = document.getElementById('menu');
-      menu.classList.toggle('hidden');
-    });
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
