--- a/home.html
+++ b/home.html
@@ -7,11 +7,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
   <style>
+    @font-face {
+      font-family: 'Impact';
+      src: local('Impact'), local('Impact'), url('https://fonts.cdnfonts.com/s/15363/Impact.woff') format('woff');
+    }
     body {
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Impact', fantasy;
       background-color: black;
       color: white;
       overflow: hidden;
@@ -55,6 +58,16 @@
       0% { opacity: 0.5; }
       100% { opacity: 1; }
     }
+    .profile-pic {
+      width: 100%;
+      max-width: 300px;
+      border-radius: 50%;
+      border: 5px solid white;
+    }
+    .intro-text {
+      text-transform: lowercase;
+      font-size: 2.5rem;
+    }
   </style>
 </head>
 <body>
@@ -97,16 +110,19 @@
   </nav>
   <div class="container text-center d-flex flex-column justify-content-center align-items-center" style="min-height: 80vh;">
     <div class="mb-4">
-      <i class="fas fa-tools fa-3x"></i>
-      <h1 class="mt-3">Em breve</h1>
+      <img alt="Foto de perfil de Tiago Batista da Silva" class="profile-pic" src="https://avatars.githubusercontent.com/u/121637450?s=400&u=642904ff86ccbd29d93e7bfff4f5a499a61618fc&v=4"/>
+      <h1 class="mt-3 intro-text">quem sou eu</h1>
     </div>
     <div class="content-area mb-4">
       <!-- Conteúdo central pode ser inserido aqui -->
-      <p>Este é um espaço reservado para conteúdo adicional.</p>
+      <p>32 anos, estudante de tecnologia no 1º semestre. Dedico este espaço para informações profissionais e acadêmicas.</p>
     </div>
     <div class="d-flex justify-content-center mt-4">
       <button class="btn btn-outline-light me-3">
         <i class="fas fa-arrow-left fa-2x"></i>
+      </button>
+      <button class="btn btn-outline-light me-3">
+        <i class="fas fa-home fa-2x"></i>
       </button>
       <button class="btn btn-outline-light">
         <i class="fas fa-arrow-right fa-2x"></i>
