--- a/home.html
+++ b/home.html
@@ -109,10 +109,12 @@
     </div>
   </nav>
   <div class="container text-center d-flex flex-column justify-content-center align-items-center" style="min-height: 80vh;">
-    <div class="mb-4">
-      <img alt="Foto de perfil de Tiago Batista da Silva" class="profile-pic" src="https://avatars.githubusercontent.com/u/121637450?s=400&u=642904ff86ccbd29d93e7bfff4f5a499a61618fc&v=4"/>
-      <h1 class="mt-3 intro-text">quem sou eu</h1>
-    </div>
+   <div class="text-center relative z-10">
+   <img alt="Perfil de @otiiagosilva" class="rounded-full w-64 h-64 mx-auto mb-6" height="256" src="https://avatars.githubusercontent.com/u/121637450?s=400&u=642904ff86ccbd29d93e7bfff4f5a499a61618fc&v=4" width="256"/>
+   <p class="text-white text-xl mb-4 shadow-lg blinking-cursor">
+    @otiiagosilva
+   </p>
+   <div class="flex justify-center space-x-8 text-4xl mb-6">
     <div class="content-area mb-4">
       <!-- Conteúdo central pode ser inserido aqui -->
       <p>32 anos, estudante de tecnologia no 1º semestre. Dedico este espaço para informações profissionais e acadêmicas.</p>
