--- a/home.html
+++ b/home.html
@@ -6,8 +6,8 @@
   <meta property="og:url" content="https://otiiagosilva.github.io/profile/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <style>
     @font-face {
       font-family: 'Impact';
@@ -62,11 +62,19 @@
       width: 100%;
       max-width: 300px;
       border-radius: 50%;
-      border: 5px solid white;
     }
     .intro-text {
-      text-transform: lowercase;
+      text-transform: uppercase;
       font-size: 2.5rem;
+    }
+    .content-area {
+      border: 1px solid white;
+      padding: 1rem;
+      max-width: 600px;
+      font-size: 1.25rem; /* Aumenta o tamanho da fonte do texto de apresentação */
+    }
+    .nav-link {
+      font-size: 1.125rem; /* Aumenta o tamanho da fonte do menu */
     }
   </style>
 </head>
@@ -79,49 +87,34 @@
     <div class="stars" style="top: 70%; left: 80%; animation-delay: 3s;"></div>
     <div class="stars" style="top: 90%; left: 10%; animation-delay: 4s;"></div>
   </div>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+  <nav class="bg-transparent">
+    <div class="container mx-auto px-4 py-2 flex justify-between items-center">
+      <button class="text-white md:hidden" id="menu-button">
+        <i class="fas fa-bars"></i>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Redes Sociais</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Projetos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Certificados</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Galeria</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contato</a>
-          </li>
-        </ul>
+      <div class="hidden md:flex space-x-4" id="menu">
+        <a href="#" class="text-white nav-link">Home</a>
+        <a href="#" class="text-white nav-link">Redes Sociais</a>
+        <a href="#" class="text-white nav-link">Projetos</a>
+        <a href="#" class="text-white nav-link">Certificados</a>
+        <a href="#" class="text-white nav-link">Galeria</a>
+        <a href="#" class="text-white nav-link">Contato</a>
       </div>
     </div>
   </nav>
-  <div class="container text-center d-flex flex-column justify-content-center align-items-center" style="min-height: 80vh;">
+  <div class="container mx-auto text-center flex flex-col justify-center items-center min-h-screen">
     <div class="mb-4">
-      <img alt="Foto de perfil de Tiago Batista da Silva" class="profile-pic" src="https://avatars.githubusercontent.com/u/121637450?s=400&u=642904ff86ccbd29d93e7bfff4f5a499a61618fc&v=4"/>
-      <h1 class="mt-3 intro-text">quem sou eu</h1>
+      <img alt="Foto de perfil de Tiago Batista da Silva" class="profile-pic" src="https://avatars.githubusercontent.com/u/121637450?s=400&u=642904ff86ccbd29d93e7bfff4f5a499a641618fc&v=4"/>
+      <h1 class="mt-3 intro-text">QUEM SOU EU</h1>
     </div>
     <div class="content-area mb-4">
-      <!-- Conteúdo central pode ser inserido aqui -->
       <p>32 anos, estudante de tecnologia no 1º semestre. Dedico este espaço para informações profissionais e acadêmicas.</p>
     </div>
-    <div class="d-flex justify-content-center mt-4">
-      <button class="btn btn-outline-light me-3">
+    <div class="flex justify-center mt-4 space-x-3">
+      <button class="btn btn-outline-light">
         <i class="fas fa-arrow-left fa-2x"></i>
       </button>
-      <button class="btn btn-outline-light me-3">
+      <button class="btn btn-outline-light">
         <i class="fas fa-home fa-2x"></i>
       </button>
       <button class="btn btn-outline-light">
@@ -132,7 +125,15 @@
   <footer class="text-center py-3">
     &copy; 2024
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+  <script>
+    document.getElementById('menu-button').addEventListener('click', function() {
+      var menu = document.getElementById('menu');
+      if (menu.classList.contains('hidden')) {
+        menu.classList.remove('hidden');
+      } else {
+        menu.classList.add('hidden');
+      }
+    });
+  </script>
 </body>
 </html>
