--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
   <div class="container mx-auto text-center flex flex-col justify-center items-center min-h-screen">
     <div class="mb-4">
       <img alt="Foto de perfil de Tiago Batista da Silva" class="profile-pic" src="https://avatars.githubusercontent.com/u/121637450?s=400&u=642904ff86ccbd29d93e7bfff4f5a499a641618fc&v=4"/>
-      <h1 class="mt-3 intro-text">QUEM SOU EU</h1>
+      <h1 class="mt-3 intro-text">QUEM SOU EU?</h1>
     </div>
     <div class="content-area mb-4">
-      <p>32 anos, estudante de tecnologia no 1º semestre. Dedico este espaço para informações profissionais e acadêmicas.</p>
+      <p>Tiago Batista da Silva, 32 anos, estudante de tecnologia no 1º semestre. Dedico este espaço para informações profissionais e acadêmicas.</p>
     </div>
     <div class="flex justify-center mt-4 space-x-3">
       <button class="btn btn-outline-light">
