--- a/home.html
+++ b/home.html
@@ -93,10 +93,9 @@
         <i class="fas fa-bars"></i>
       </button>
       <div class="hidden md:flex space-x-4" id="menu">
-        <a href="#" class="text-white nav-link">Home</a>
+        <a href="#" class="text-white nav-link">Inicio</a>
         <a href="#" class="text-white nav-link">Redes Sociais</a>
         <a href="#" class="text-white nav-link">Projetos</a>
-        <a href="#" class="text-white nav-link">Certificados</a>
       </div>
     </div>
   </nav>
