--- a/home.html
+++ b/home.html
@@ -111,7 +111,8 @@
       <button class="btn btn-outline-light">
         <i class="fas fa-arrow-left fa-2x"></i>
       </button>
-      <button class="btn btn-outline-light" href="home.html">
+      <button class="btn btn-outline-light">
+      <a href="home.html" class="btn btn-outline-light">
         <i class="fas fa-home fa-2x"></i>
       </button>
       <button class="btn btn-outline-light">
