--- a/home.html
+++ b/home.html
@@ -108,6 +108,7 @@
       <p>Tiago, 32 anos, estudante de tecnologia no 1º semestre. Dedico este espaço para informações profissionais e acadêmicas.</p>
     </div>
     <div class="flex justify-center mt-4 space-x-3">
+      <a href="home.html" class="btn btn-outline-light">
       <button class="btn btn-outline-light">
         <i class="fas fa-arrow-left fa-2x"></i>
       </button>
@@ -116,6 +117,7 @@
         <i class="fas fa-home fa-2x"></i>
       </button>
       <button class="btn btn-outline-light">
+        <a href="academico.html" class="btn btn-outline-light">
         <i class="fas fa-arrow-right fa-2x"></i>
       </button>
     </div>
