--- a/home.html
+++ b/home.html
@@ -94,7 +94,7 @@
       </button>
       <div class="hidden md:flex space-x-4" id="menu">
         <a href="#" class="text-white nav-link">Acadêmico</a>
-        <a href="#" class="text-white nav-link">Profissional</a>
+        <a href="https://otiiagosilva.github.io/cv_otiiagosilva/" class="text-white nav-link">Profissional</a>
         <a href="#" class="text-white nav-link">Pessoal</a>
       </div>
     </div>
