--- a/profissional.html
+++ b/profissional.html
@@ -84,9 +84,9 @@
         <i class="fas fa-bars"></i>
       </button>
       <div class="hidden md:flex space-x-4" id="menu">
-        <a href="#" class="text-white nav-link">Acadêmico</a>
+        <a href="academico.html" class="text-white nav-link">Acadêmico</a>
         <a href="https://otiiagosilva.github.io/cv_otiiagosilva/" class="text-white nav-link">Profissional</a>
-        <a href="#" class="text-white nav-link">Pessoal</a>
+        <a href="pessoal.html" class="text-white nav-link">Pessoal</a>
       </div>
     </div>
   </nav>
@@ -95,7 +95,7 @@
       <iframe src="https://otiiagosilva.github.io/cv_otiiagosilva/" class="w-full h-[70vh]"></iframe>
     </div>
     <div class="flex justify-center mt-4 space-x-3">
-      <a href="home.html" class="btn btn-outline-light">
+      <a href="academico.html" class="btn btn-outline-light">
         <button class="btn btn-outline-light">
           <i class="fas fa-arrow-left fa-2x"></i>
         </button>
@@ -105,7 +105,7 @@
           <i class="fas fa-home fa-2x"></i>
         </button>
       </a>
-      <a href="academico.html" class="btn btn-outline-light">
+      <a href="pessoal.html" class="btn btn-outline-light">
         <button class="btn btn-outline-light">
           <i class="fas fa-arrow-right fa-2x"></i>
         </button>
