--- a/profissional.html
+++ b/profissional.html
@@ -90,10 +90,13 @@
       </div>
     </div>
   </nav>
-  <div class="container mx-auto text-center flex flex-col justify-center items-center min-h-screen" style="margin-top: 0vh;">
-    <div class="content-area mb-4">
-      <iframe src="https://otiiagosilva.github.io/cv_otiiagosilva/" class="w-full h-[70vh]"></iframe>
-    </div>
+<iframe id="meuIframe" src="https://otiiagosilva.github.io/cv_otiiagosilva/" class="w-full"></iframe>
+<script>
+  const iframe = document.getElementById('meuIframe');
+  iframe.onload = function() {
+    iframe.style.height = iframe.contentWindow.document.body.scrollHeight + 'px';
+  };
+</script>
     <div class="flex justify-center mt-4 space-x-3">
         <button class="btn btn-outline-light">
         <a href="academico.html" class="btn btn-outline-light">
