--- a/profissional.html
+++ b/profissional.html
@@ -90,10 +90,12 @@
       </div>
     </div>
   </nav>
-  <div class="container mx-auto text-center flex flex-col justify-center items-center min-h-screen" style="margin-top: 0vh;">
-    <div class="content-area mb-4">
-     <iframe src="https://otiiagosilva.github.io/cv_otiiagosilva/" class="w-full h-800"></iframe>
-    </div>
+  <-- container do IFRAME -->
+  <div class="container mx-auto text-center flex flex-col justify-center items-center min-h-screen overflow-y-auto">
+  <div class="content-area mb-4">
+  <iframe id="meuIframe" src="https://otiiagosilva.github.io/cv_otiiagosilva/" class="w-full h-full"></iframe>
+  </div>
+  </div>
     <div class="flex justify-center mt-4 space-x-3">
         <button class="btn btn-outline-light">
         <a href="academico.html" class="btn btn-outline-light">
