--- a/profissional.html
+++ b/profissional.html
@@ -92,7 +92,7 @@
   </nav>
  <div class="container mx-auto text-center flex flex-col justify-center items-center min-h-screen" style="margin-top: -5vh;">
     <div class="content-area mb-4">
-      <iframe src="https://otiiagosilva.github.io/cv_otiiagosilva/" class="w-full h-96"></iframe>
+      <iframe src="https://otiiagosilva.github.io/cv_otiiagosilva/" width="100%" height="600px"></iframe>
     </div>
     <div class="flex justify-center mt-4 space-x-3">
         <button class="btn btn-outline-light">
