Atualizar o watchdogg.html

--- a/watchdogg.html
+++ b/watchdogg.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consulta CPF</title>
+    <title>Consulta CPF- CREDLINK</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"></link>
     <style>
@@ -24,7 +24,7 @@
 <body class="bg-gray-900 text-white p-6 flex items-center justify-center min-h-screen">
 
     <div class="w-full max-w-lg mx-auto bg-gray-800 p-6 rounded-lg shadow-lg">
-        <h1 class="text-2xl font-bold mb-4 typing-text">Busca CREDLINK</h1>
+       <center> <h1 class="text-2xl font-bold mb-4 typing-text">Busca CREDLINK</h1></center>
         <div class="flex flex-col sm:flex-row items-center mb-4">
             <input type="text" id="cpfInput" placeholder="Digite o CPF" maxlength="11" class="flex-grow p-2 border border-gray-600 rounded mb-2 sm:mb-0 sm:mr-2 bg-gray-700 text-white">
             <div class="flex space-x-2">
