Atualizar o wdgg.html

--- a/wdgg.html
+++ b/wdgg.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SYDLE Systems 2024 - Rastreadores</title>
+    <title>WATCHDOGG Systems 2024 - Rastreadores</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
@@ -60,7 +60,7 @@
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen">
     <div class="text-center">
-        <h1 class="text-6xl glitch">.WATCHDOGG</h1>
+        <h1 class="text-6xl glitch">WATCHDOGG.EXE</h1>
         <p class="mt-4">SYDLE Systems 2024 - Rastreadores</p>
         <p>Selecione um módulo para continuar:</p>
         <p class="mt-4 loading-text">Carregando<span>.</span><span>.</span><span>.</span></p>
